--- a/webappick-product-feed-for-woocommerce/admin/css/woo-feed-admin.css
+++ b/webappick-product-feed-for-woocommerce/admin/css/woo-feed-admin.css
@@ -60,7 +60,7 @@
 }
 
 .woo-feed-ctx-startup-notice {
-  min-height: 168px;
+  min-height: 130px;
   background-size: contain !important;
   border: none;
   display: block;
@@ -81,6 +81,19 @@
   margin-top: 40px;
 }
 .woo-feed-ctx-halloween-notice button::before {
+  color: #fbfbfb;
+  font-size: 18px;
+}
+
+.woo-feed-ctx-black-friday-notice {
+  min-height: 130px;
+  background-size: contain !important;
+  border: none;
+  display: block;
+  margin-left: 0;
+  margin-top: 40px;
+}
+.woo-feed-ctx-black-friday-notice button::before {
   color: #fbfbfb;
   font-size: 18px;
 }
@@ -2306,5 +2319,69 @@ span[id*=cat-map-] {
     align-items: center;
     -ms-flex-pack: center;
     justify-content: center;
+  }
+}
+/* Basic styling for the div */
+.woo-feed-widget-banner-bfc {
+  background-image: url("../images/mcm/mcm_pro_720.png");
+  aspect-ratio: 720/250;
+  height: auto;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* Media query for laptop devices */
+@media (min-width: 1024px) {
+  .woo-feed-widget-banner-bfc {
+    background-image: url("../images/mcm/mcm_pro_360.png");
+    aspect-ratio: 360/250;
+  }
+}
+/* Media query for large laptop devices */
+@media (min-width: 1440px) {
+  .woo-feed-widget-banner-bfc {
+    background-image: url("../images/mcm/mcm_pro_580.png");
+    aspect-ratio: 580/270;
+  }
+}
+/* Basic styling for the div */
+.woo-feed-widget-banner-bfc-free {
+  background-image: url("../images/mcm/mcm_free_720.png");
+  aspect-ratio: 720/250;
+  height: auto;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* Media query for laptop devices */
+@media (min-width: 1024px) {
+  .woo-feed-widget-banner-bfc-free {
+    background-image: url("../images/mcm/mcm_free_360.png");
+    aspect-ratio: 360/250;
+  }
+}
+/* Media query for large laptop devices */
+@media (min-width: 1440px) {
+  .woo-feed-widget-banner-bfc-free {
+    background-image: url("../images/mcm/mcm_free_580.png");
+    aspect-ratio: 580/270;
   }
 }
