--- a/webappick-product-feed-for-woocommerce/admin/css/V5CSS/index.css
+++ b/webappick-product-feed-for-woocommerce/admin/css/V5CSS/index.css
@@ -823,6 +823,18 @@ input[type="checkbox"]:focus,
   bottom: 0px;
 }
 
+.-ctx-bottom-\[15\%\] {
+  bottom: -15%;
+}
+
+.-ctx-left-\[20\%\] {
+  left: -20%;
+}
+
+.-ctx-right-1\/4 {
+  right: -25%;
+}
+
 .-ctx-top-1 {
   top: -0.25rem;
 }
@@ -837,6 +849,10 @@ input[type="checkbox"]:focus,
 
 .-ctx-top-8 {
   top: -2rem;
+}
+
+.-ctx-top-\[20\%\] {
+  top: -20%;
 }
 
 .ctx--left-1 {
@@ -887,12 +903,20 @@ input[type="checkbox"]:focus,
   right: 0px;
 }
 
+.ctx-right-10 {
+  right: 2.5rem;
+}
+
 .ctx-top-0 {
   top: 0px;
 }
 
 .ctx-top-1 {
   top: 0.25rem;
+}
+
+.ctx-top-10 {
+  top: 2.5rem;
 }
 
 .ctx-top-2 {
@@ -935,8 +959,16 @@ input[type="checkbox"]:focus,
   z-index: 10;
 }
 
+.ctx-z-20 {
+  z-index: 20;
+}
+
 .ctx-z-50 {
   z-index: 50;
+}
+
+.ctx-z-\[100000\] {
+  z-index: 100000;
 }
 
 .ctx-z-auto {
@@ -989,6 +1021,11 @@ input[type="checkbox"]:focus,
   margin-right: auto !important;
 }
 
+.ctx-mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .ctx-mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -1012,6 +1049,11 @@ input[type="checkbox"]:focus,
 .ctx-my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.ctx-my-1\.5 {
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
 }
 
 .ctx-my-2 {
@@ -1296,6 +1338,15 @@ input[type="checkbox"]:focus,
   display: none;
 }
 
+.ctx-aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
+.ctx-size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
 .\!ctx-h-\[150px\] {
   height: 150px !important;
 }
@@ -1368,6 +1419,10 @@ input[type="checkbox"]:focus,
 
 .ctx-h-full {
   height: 100%;
+}
+
+.ctx-h-px {
+  height: 1px;
 }
 
 .ctx-max-h-60 {
@@ -1484,6 +1539,10 @@ input[type="checkbox"]:focus,
 
 .ctx-w-\[10\%\] {
   width: 10%;
+}
+
+.ctx-w-\[107px\] {
+  width: 107px;
 }
 
 .ctx-w-\[140\] {
@@ -1912,8 +1971,20 @@ input[type="checkbox"]:focus,
   gap: 1rem;
 }
 
+.ctx-gap-5 {
+  gap: 1.25rem;
+}
+
 .ctx-gap-6 {
   gap: 1.5rem;
+}
+
+.ctx-gap-\[14px\] {
+  gap: 14px;
+}
+
+.ctx-gap-\[18px\] {
+  gap: 18px;
 }
 
 .ctx-gap-x-1 {
@@ -2008,6 +2079,11 @@ input[type="checkbox"]:focus,
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 
+.ctx-self-stretch {
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+}
+
 .ctx-overflow-auto {
   overflow: auto;
 }
@@ -2080,6 +2156,14 @@ input[type="checkbox"]:focus,
 
 .ctx-rounded-\[3px\] {
   border-radius: 3px;
+}
+
+.ctx-rounded-\[5px\] {
+  border-radius: 5px;
+}
+
+.ctx-rounded-\[6px\] {
+  border-radius: 6px;
 }
 
 .ctx-rounded-full {
@@ -2195,6 +2279,11 @@ input[type="checkbox"]:focus,
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
 }
 
+.ctx-border-\[\#E13639\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(225 54 57 / var(--tw-border-opacity));
+}
+
 .ctx-border-\[\#fff\] {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -2267,6 +2356,16 @@ input[type="checkbox"]:focus,
   background-color: rgb(10 130 223 / var(--tw-bg-opacity));
 }
 
+.ctx-bg-\[\#11A1FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 161 255 / var(--tw-bg-opacity));
+}
+
+.ctx-bg-\[\#1A2363\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 35 99 / var(--tw-bg-opacity));
+}
+
 .ctx-bg-\[\#94a3b81c\] {
   background-color: #94a3b81c;
 }
@@ -2276,9 +2375,24 @@ input[type="checkbox"]:focus,
   background-color: rgb(240 240 241 / var(--tw-bg-opacity));
 }
 
+.ctx-bg-\[\#F1D259\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 210 89 / var(--tw-bg-opacity));
+}
+
+.ctx-bg-\[\#F92187\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 33 135 / var(--tw-bg-opacity));
+}
+
 .ctx-bg-\[\#FEC129\] {
   --tw-bg-opacity: 1;
   background-color: rgb(254 193 41 / var(--tw-bg-opacity));
+}
+
+.ctx-bg-\[\#FFC107\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 193 7 / var(--tw-bg-opacity));
 }
 
 .ctx-bg-\[\#FFDE59\] {
@@ -2293,6 +2407,19 @@ input[type="checkbox"]:focus,
 
 .ctx-bg-\[\#fcc72791\] {
   background-color: #fcc72791;
+}
+
+.ctx-bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.ctx-bg-\[rgba\(0\,0\,0\,0\.70\)\] {
+  background-color: rgba(0,0,0,0.70);
+}
+
+.ctx-bg-\[rgba\(255\,255\,255\,0\.05\)\] {
+  background-color: rgba(255,255,255,0.05);
 }
 
 .ctx-bg-black {
@@ -2418,6 +2545,12 @@ input[type="checkbox"]:focus,
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.ctx-from-\[\#6EADE0\] {
+  --tw-gradient-from: #6EADE0 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(110 173 224 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .ctx-from-\[\#6cd5ff\] {
   --tw-gradient-from: #6cd5ff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(108 213 255 / 0) var(--tw-gradient-to-position);
@@ -2459,6 +2592,10 @@ input[type="checkbox"]:focus,
 
 .ctx-to-\[\#6c5ce7\] {
   --tw-gradient-to: #6c5ce7 var(--tw-gradient-to-position);
+}
+
+.ctx-to-\[\#7100C7\] {
+  --tw-gradient-to: #7100C7 var(--tw-gradient-to-position);
 }
 
 .ctx-to-\[\#FF9671\] {
@@ -2660,9 +2797,19 @@ input[type="checkbox"]:focus,
   padding-bottom: 2rem;
 }
 
+.ctx-py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .ctx-py-\[1px\] {
   padding-top: 1px;
   padding-bottom: 1px;
+}
+
+.ctx-py-\[22px\] {
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
 .\!ctx-pl-2 {
@@ -2859,6 +3006,16 @@ input[type="checkbox"]:focus,
   line-height: 2rem;
 }
 
+.ctx-text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.ctx-text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .ctx-text-\[0\.8125rem\] {
   font-size: 0.8125rem;
 }
@@ -2897,6 +3054,14 @@ input[type="checkbox"]:focus,
 
 .ctx-text-\[22px\] {
   font-size: 22px;
+}
+
+.ctx-text-\[27px\] {
+  font-size: 27px;
+}
+
+.ctx-text-\[32px\] {
+  font-size: 32px;
 }
 
 .ctx-text-\[8px\] {
@@ -2944,6 +3109,10 @@ input[type="checkbox"]:focus,
   font-weight: 700;
 }
 
+.ctx-font-extrabold {
+  font-weight: 800;
+}
+
 .ctx-font-medium {
   font-weight: 500;
 }
@@ -2970,6 +3139,10 @@ input[type="checkbox"]:focus,
 
 .ctx-leading-6 {
   line-height: 1.5rem;
+}
+
+.ctx-leading-\[38px\] {
+  line-height: 38px;
 }
 
 .ctx-leading-none {
@@ -3028,14 +3201,34 @@ input[type="checkbox"]:focus,
   color: rgb(34 113 177 / var(--tw-text-opacity));
 }
 
+.ctx-text-\[\#3675E1\] {
+  --tw-text-opacity: 1;
+  color: rgb(54 117 225 / var(--tw-text-opacity));
+}
+
 .ctx-text-\[\#A4286A\] {
   --tw-text-opacity: 1;
   color: rgb(164 40 106 / var(--tw-text-opacity));
 }
 
+.ctx-text-\[\#F1D259\] {
+  --tw-text-opacity: 1;
+  color: rgb(241 210 89 / var(--tw-text-opacity));
+}
+
+.ctx-text-\[\#FFC107\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 193 7 / var(--tw-text-opacity));
+}
+
 .ctx-text-\[\#ef657b\] {
   --tw-text-opacity: 1;
   color: rgb(239 101 123 / var(--tw-text-opacity));
+}
+
+.ctx-text-\[\#f1d259\] {
+  --tw-text-opacity: 1;
+  color: rgb(241 210 89 / var(--tw-text-opacity));
 }
 
 .ctx-text-black {
@@ -3185,6 +3378,36 @@ input[type="checkbox"]:focus,
 .ctx-shadow-\[0_1px_6px_0_\#0000004d\] {
   --tw-shadow: 0 1px 6px 0 #0000004d;
   --tw-shadow-colored: 0 1px 6px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ctx-shadow-\[0_2\.533px_0_0_\#FFD0E6\] {
+  --tw-shadow: 0 2.533px 0 0 #FFD0E6;
+  --tw-shadow-colored: 0 2.533px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ctx-shadow-\[0_3\.105px_0_0_\#095180\] {
+  --tw-shadow: 0 3.105px 0 0 #095180;
+  --tw-shadow-colored: 0 3.105px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ctx-shadow-\[0_3\.105px_0_0_\#E13639\] {
+  --tw-shadow: 0 3.105px 0 0 #E13639;
+  --tw-shadow-colored: 0 3.105px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ctx-shadow-\[0_3\.907px_3\.907px_0_rgba\(0\,0\,0\,0\.05\)\,1\.953px_1\.953px_0_0\.977px_\#DAB900\] {
+  --tw-shadow: 0 3.907px 3.907px 0 rgba(0,0,0,0.05),1.953px 1.953px 0 0.977px #DAB900;
+  --tw-shadow-colored: 0 3.907px 3.907px 0 var(--tw-shadow-color), 1.953px 1.953px 0 0.977px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.ctx-shadow-\[0_3\.907px_3\.907px_0_rgba\(0\,0\,0\,0\.05\)\,1\.953px_1\.953px_0_0\.977px_\#FFD0E6\] {
+  --tw-shadow: 0 3.907px 3.907px 0 rgba(0,0,0,0.05),1.953px 1.953px 0 0.977px #FFD0E6;
+  --tw-shadow-colored: 0 3.907px 3.907px 0 var(--tw-shadow-color), 1.953px 1.953px 0 0.977px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -3489,6 +3712,31 @@ img {
 .hover\:\!ctx-bg-red-200:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:ctx-bg-\[\#3DB2FF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(61 178 255 / var(--tw-bg-opacity));
+}
+
+.hover\:ctx-bg-\[\#FF4BA0\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 75 160 / var(--tw-bg-opacity));
+}
+
+.hover\:ctx-bg-\[\#FF54A7\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 84 167 / var(--tw-bg-opacity));
+}
+
+.hover\:ctx-bg-\[\#FFF9F9\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 249 249 / var(--tw-bg-opacity));
+}
+
+.hover\:ctx-bg-\[\#f1bc59\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 188 89 / var(--tw-bg-opacity));
 }
 
 .hover\:ctx-bg-\[\#f2ae01\]:hover {
@@ -4178,6 +4426,10 @@ img {
     width: 50%;
   }
 
+  .md\:ctx-w-\[560px\] {
+    width: 560px;
+  }
+
   .md\:ctx-grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -4258,6 +4510,10 @@ img {
 
   .lg\:ctx-w-80 {
     width: 20rem;
+  }
+
+  .lg\:ctx-w-\[840px\] {
+    width: 840px;
   }
 
   .lg\:ctx-w-\[85\%\] {
@@ -4394,6 +4650,10 @@ img {
 
   .xl\:ctx-w-96 {
     width: 24rem;
+  }
+
+  .xl\:ctx-w-\[1060px\] {
+    width: 1060px;
   }
 
   .xl\:ctx-w-\[85\%\] {
@@ -4662,6 +4922,10 @@ img {
 
   .\32xl\:ctx-w-72 {
     width: 18rem;
+  }
+
+  .\32xl\:ctx-w-\[1200px\] {
+    width: 1200px;
   }
 
   .\32xl\:ctx-w-max {
